refractor: added links to anchor tags

--- a/components/cart/cart.html
+++ b/components/cart/cart.html
@@ -35,8 +35,8 @@
             >Wishlist</a
           >
         </li>
-        <li><a href="#">Cart</a></li>
-        <li><a href="#">Profile</a></li>
+        <li><a href="/components/cart/cart.html">Cart</a></li>
+        <li><a href="/authentication/signUpPage/signup.html">Profile</a></li>
         <li><a href="/authentication/loginPage/login.html">Login</a></li>
       </ul>
     </header>
