--- a/index.css
+++ b/index.css
@@ -141,9 +141,20 @@ section.category {
 
 }
 
+.home-page-btn {
+    background-color: var(--lt-brown);
+    padding: 0.4rem 1.5rem;
+    border: 1px solid var(--lt-brown);
+    border-radius: 1.8rem;
+    color: var(--lt-white);
+    margin-top: 1rem;
+    box-shadow: 0 1px 8px var(--lt-choco);
+    border: none;
+    outline: none;
+}
 
 
 .remove-anchor-style {
     text-decoration: none;
-    color: var(--lt-white)
+    color: var(--lt-red)
 }
